Pull Request criando a integração do java com o banco

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,20 @@
 {
     "java.compile.nullAnalysis.mode": "automatic",
-    "java.configuration.updateBuildConfiguration": "interactive"
+    "java.configuration.updateBuildConfiguration": "interactive",
+    "sqltools.connections": [
+        {
+            "mysqlOptions": {
+                "authProtocol": "default",
+                "enableSsl": "Disabled"
+            },
+            "previewLimit": 50,
+            "server": "localhost",
+            "port": 2001,
+            "driver": "MySQL",
+            "name": "Vitor",
+            "username": "root",
+            "database": "eventosapp",
+            "password": "Mito2010*"
+        }
+    ]
 }
