--- a/eventoapp/pom.xml
+++ b/eventoapp/pom.xml
@@ -62,6 +62,11 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>8.0.33</version>
 		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>6.2.0.Final</version> <!-- Verifique pela versão mais recente -->
+		</dependency>
 	</dependencies>
 
 	<build>
